@@ -19,8 +19,8 @@
 <!-- For the regular version (with TTS), the versionCode must be odd. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="261"
-        android:versionName="2014.12.02e (TTS)"
+        android:versionCode="263"
+        android:versionName="2014.12.17a (TTS)"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.4 (19). -->
