@@ -167,7 +167,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (¡Saludos!)</string>
-    <string name="tutorial_1_msg">Este tutorial te guiará brevemente a través de boQwI\'.\n\n* Nuevos cambios *\n2014-12-02: color-coded parts of speech, bug fixes, show Klingon font in more places.\n2014-11-16: new vocab from qepHom\'a\' 2014.\n2014-10-23: Text-To-Speech integration.</string>
+    <string name="tutorial_1_msg">Este tutorial te guiará brevemente a través de boQwI\'.\n\n* Nuevos cambios *\n2014-12-17: Added words from K.R.A. DeCandido.\n2014-12-02: color-coded parts of speech, bug fixes, show Klingon font in more places.\n2014-11-16: new vocab from qepHom\'a\' 2014.</string>
     <string name="tutorial_2_title">Búsqueda</string>
     <string name="tutorial_2_msg">Busca a través de la base de datos en inglés o Klingon.</string>
     <string name="tutorial_3_title">Recursos</string>
